--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -4,7 +4,12 @@
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
 
+.odd.big {
+    font-size: 24px;
+}
+
 #second {
     color: rgb(0,0,255);
     font-size: 36px;
 }
+
