Add selector for both classes
Cleaned the stylesheet and placed the shared styling of the elements
in a new selector that targets both classes.

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,5 +1,5 @@
+.one,
 .two {
-    background-color: yellow;
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
@@ -9,6 +9,6 @@
     color: #ffffff;
 }
 
-
-
-
+.two {
+    background-color: yellow;
+}
