--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,7 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Courier', monospace;
   background: papayawhip;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,7 +18,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  margin: 10px;
+  
   padding: 0;
   gap: 15px;
   display: flex;
