Wrap header content in 2 flex divs
logo and ul are together with flex.
notification and button are wrapped with flex.
ul was given flex.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -47,4 +47,14 @@ a {
 
 ul {
   list-style-type: none;
+  /* My code */
+  display: flex;
+}
+
+.left-side {
+  display: flex;
+}
+
+.right-side {
+  display: flex;
 }
