--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -51,11 +51,15 @@ ul {
   list-style-type: none;
   /* My code */
   display: flex;
-
+  padding: 0;
+  margin: 0;
+  gap: 16px;
 }
 
 .left-side {
   display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .right-side {
