Space right side content and fix to right side
Added gap and an auto margin-left.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -60,8 +60,11 @@ ul {
   display: flex;
   align-items: center;
   gap: 16px;
+
 }
 
 .right-side {
   display: flex;
+  gap: 16px;
+  margin-left: auto;
 }
