Center align all text and rename img .text divs

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.text, .title {
+  text-align: center;
+}
+
 img {
   width: 100px;
   height: 100px;
