--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -6,6 +6,13 @@ body {
   text-align: center;
 }
 
+.plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -18,7 +25,7 @@ img {
 
 .plants {
   display: flex;
-
+  gap: 52px;
 }
 /* do not edit this footer */
 .footer {
