--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,10 +1,14 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.text, .title {
+.text {
   text-align: center;
 }
+
 
 .plant {
   display: flex;
