--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,8 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.top-line {
+  display: flex;
+  justify-content: space-between;
+}
