Align and bold header and close button

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -68,7 +68,13 @@ button.cancel {
   color: royalblue;
 }
 
+.header {
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .top-line {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
