Add margin-bottom to .top-line and .text

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -81,5 +81,9 @@ button.cancel {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 }
 
+.text {
+  margin-bottom: 15px;
+}
