--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -30,3 +30,11 @@ input {
   justify-content: space-between;
   align-items: center;
 }
+
+.left-links, .right-links {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  gap: 30px;
+}
