Pad header and footer by 20px

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -37,6 +37,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px;
 }
 
 .left-links, .right-links {
