--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -33,11 +35,16 @@ a {
   text-decoration: none;
   color: grey;
 }
+
 .header, .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+}
+
+.footer {
+  background-color:#eeeeee;
 }
 
 .left-links, .right-links {
@@ -46,4 +53,8 @@ a {
   margin: 0;
   padding: 0;
   gap: 30px;
+}
+
+.content {
+  flex: 1;
 }
