--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -57,4 +57,9 @@ a {
 
 .content {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
