Pad buttons 8px 15px

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -36,6 +36,10 @@ a {
   color: grey;
 }
 
+button {
+  padding: 8px 20px;
+}
+
 .header, .footer {
   display: flex;
   justify-content: space-between;
