Wrap .cards in flex container
Used flex row, flex-wrap, and spaced cards with
padding and gap.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -63,3 +63,15 @@ ul {
 li {
   margin-bottom: 8px;
 }
+
+.card-container {
+  padding: 64px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.card {
+  width: 200px;
+}
